checked the test files with main and adjusted accordingly